--- a/assets/img/container/stadium/WORLD CUP 2022_files/style.css
+++ b/assets/img/container/stadium/WORLD CUP 2022_files/style.css
@@ -30,7 +30,7 @@ html{
     height: 80px;   
     position: fixed ;
     top: 0;
-    z-index: 1000;
+    z-index: 1;
 }
 .hbar img{
     width: 104px;  
@@ -516,7 +516,7 @@ html{
 .stadium-slide{
    display: flex;
    justify-content: center;
-   width: auto;
+   
 }
 .sta-slider{
     width: 25%;
@@ -524,43 +524,28 @@ html{
     margin-right: 20px;
     border: 2px solid #eaeaea;
     cursor: pointer;
-    position: relative;
-}
-.sta-slider .img{
-    overflow: hidden;
-    height: auto;
 }
 .sta-slider img{
     width:100%;
-    height: 280px;
-    display: block;
+    height: 250px;
 }
-.sta-slider .h2{
+.sta-slider h2{
     text-align: center;
     font-size: 17px;
     font-weight: 900;
-    padding-bottom: 35px;
+
 }
 .stadium-slide .sliler-hv{
     text-align: center;
-    display: none;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    margin-bottom: 35px;
-
+    
 }
 .stadium-slide .sliler-hv p{
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 400;
     margin-bottom: 20px;
     margin-top: 10px;
     color: #bbb;
-}
-.stadium-slide .sliler-hv h2{
-    font-size: 17px;
-    font-weight: 900;
 }
 .stadium-slide .sliler-hv .bt{ 
     background-color: #fff;
@@ -573,55 +558,10 @@ html{
     text-transform: uppercase;
     font-weight:600;
     color: #000;
-}
-.stadium-slide .sta-slider:hover .sliler-hv,
-.stadium-slide .sliler-hv h2:hover
-{
-    display: block;
-    
-    
-}
-.stadium-slide .sta-slider:hover{
-    box-shadow:-6px 6px 20px rgba(0, 0, 0, 0.1);
-    color: #861835;
-}
-.stadium-slide .sta-slider img:hover{
-    transform: scale(1.2);
-}
 
-.stadium-slide .swiper-button-next>i
-,.stadium-slide .swiper-button-prev>i{
-    color: #000;
-    font-size: 20px;
-    font-weight:900;
-    text-align: center;
-    position: absolute;
-    top: 15px;
-    left: 12px;
-}
-.stadium-slide .swiper-button-next
-,.stadium-slide .swiper-button-prev{
-    display:none ;
-    border: 1px;
-    width: 46px;
-    height: 46px;
-    border-radius: 9999px;
-    
-
-}
-.stadium-slide .swiper-button-next::after
-,.stadium-slide .swiper-button-prev::after{
-    content: "";
-}
-.stadium-slide .swiper-pagination-bullet{
-    width: 26px;
-    height: 7px;
-    border-radius: 25px;
-    background: #861835;
-}
-.stadium-slide:hover .swiper-button-next,
-.stadium-slide:hover .swiper-button-prev {
-    box-shadow:  0px 5px 6px #0000001a;
-    display: block;
 }
 /* end stadium css */
+.footer{
+    
+    
+}
