--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,10 @@ html{
 }
 .hbar{
     background-color:  var(--bg-color);
+    background-image: linear-gradient(to right, rgba(134, 24, 53, 1) 0%, rgba(51, 6, 32, 1) 100%);
     width: 100%;
     height: 80px;   
-    position: fixed ;
+    position: fixed;
     top: 0;
     z-index: 100;
 }
@@ -740,6 +741,16 @@ html{
 }
 /* end stadium css */
 /* stadium show */
+@keyframes staShow{
+    from{
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to{
+        opacity: 1;
+         transform: translateY(0);
+    }
+}
 .open{
     display: none;
 }
@@ -765,13 +776,14 @@ html{
     top: 55%;
     transform: translate(-50%,-50%);
     max-height: 80%;
-    
+
    
 }
 .sta-show-container-{
     padding: 40px; 
     background-color: #fff;
     display: flex;
+        animation: staShow ease .4s;
 }
 .sta-container-info{
     width: 55%;
