--- a/assets/css/fixture.css
+++ b/assets/css/fixture.css
@@ -143,3 +143,9 @@
     background-color: #f4f6fa;
     align-items: center;
 }
+.gr-knockout{
+    width: 1519px;
+    background-color: #000;
+    height: 100px;
+    
+}
